@@ -131,7 +131,8 @@ typedef enum
 	CONFIG_QUIRKS_NONE = 0,
 	CONFIG_QUIRKS_APPLE = 1,
 	CONFIG_QUIRKS_OMTI = 2,
-	CONFIG_QUIRKS_XEBEC = 4
+	CONFIG_QUIRKS_XEBEC = 4,
+	CONFIG_QUIRKS_VMS = 8
 } CONFIG_QUIRKS;
 
 typedef enum
